[gd_scene load_steps=6 format=3 uid="uid://bp5n3mlu45ygw"]

[ext_resource type="Theme" uid="uid://qoi3oec48jp0" path="res://assets/graphics/theme/main_menu.tres" id="1_1yri4"]
[ext_resource type="Script" uid="uid://d0t3iw73mpivr" path="res://src/Game/Menu/MainMenu/MainMenu.gd" id="2_nm1fq"]
[ext_resource type="Texture2D" uid="uid://dxys0wg0f0ic5" path="res://assets/graphics/OpenVicFINALREALTRANS.png" id="3_58ess"]
[ext_resource type="PackedScene" uid="uid://b7oncobnacxmt" path="res://src/Game/LocaleButton.tscn" id="3_amonp"]
[ext_resource type="PackedScene" uid="uid://cen7wkmn6og66" path="res://src/Game/Menu/MainMenu/ReleaseInfoBox.tscn" id="3_km0er"]

[node name="MainMenu" type="Control" node_paths=PackedStringArray("_new_game_button")]
editor_description = "UI-13"
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_1yri4")
script = ExtResource("2_nm1fq")
_new_game_button = NodePath("MenuPanel/MenuList/ButtonListMargin/ButtonList/NewGameButton")

[node name="MenuPanel" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_type_variation = &"BackgroundPanel"

[node name="MenuList" type="VBoxContainer" parent="MenuPanel"]
layout_mode = 2

[node name="TitleIcon" type="TextureRect" parent="MenuPanel/MenuList"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 1.75
texture = ExtResource("3_58ess")
expand_mode = 1
stretch_mode = 5

[node name="ButtonListMargin" type="MarginContainer" parent="MenuPanel/MenuList"]
layout_mode = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_right = 12

[node name="ButtonList" type="HBoxContainer" parent="MenuPanel/MenuList/ButtonListMargin"]
custom_minimum_size = Vector2(500, 0)
layout_mode = 2
theme_type_variation = &"HBox_MainMenu_ButtonList"
theme_override_constants/separation = 18
alignment = 1

[node name="NewGameButton" type="Button" parent="MenuPanel/MenuList/ButtonListMargin/ButtonList"]
editor_description = "UI-26"
layout_mode = 2
size_flags_horizontal = 3
focus_neighbor_left = NodePath("../ExitButton")
focus_neighbor_top = NodePath("../ExitButton")
focus_neighbor_right = NodePath("../ContinueButton")
focus_next = NodePath("../ContinueButton")
focus_previous = NodePath("../ExitButton")
theme_type_variation = &"TitleButton"
text = "MAINMENU_NEW_GAME"
clip_text = true

[node name="ContinueButton" type="Button" parent="MenuPanel/MenuList/ButtonListMargin/ButtonList"]
layout_mode = 2
size_flags_horizontal = 3
focus_neighbor_left = NodePath("../NewGameButton")
focus_neighbor_right = NodePath("../MultiplayerButton")
focus_next = NodePath("../MultiplayerButton")
focus_previous = NodePath("../NewGameButton")
theme_type_variation = &"TitleButton"
disabled = true
text = "MAINMENU_CONTINUE"
clip_text = true

[node name="MultiplayerButton" type="Button" parent="MenuPanel/MenuList/ButtonListMargin/ButtonList"]
editor_description = "UI-27"
layout_mode = 2
size_flags_horizontal = 3
focus_neighbor_left = NodePath("../ContinueButton")
focus_neighbor_right = NodePath("../OptionsButton")
focus_next = NodePath("../OptionsButton")
focus_previous = NodePath("../ContinueButton")
theme_type_variation = &"TitleButton"
text = "MAINMENU_MULTIPLAYER"
clip_text = true

[node name="OptionsButton" type="Button" parent="MenuPanel/MenuList/ButtonListMargin/ButtonList"]
editor_description = "UI-5"
layout_mode = 2
size_flags_horizontal = 3
focus_neighbor_left = NodePath("../MultiplayerButton")
focus_neighbor_right = NodePath("../CreditsButton")
focus_next = NodePath("../CreditsButton")
focus_previous = NodePath("../MultiplayerButton")
theme_type_variation = &"TitleButton"
text = "MAINMENU_OPTIONS"
clip_text = true

[node name="CreditsButton" type="Button" parent="MenuPanel/MenuList/ButtonListMargin/ButtonList"]
editor_description = "UI-32"
layout_mode = 2
size_flags_horizontal = 3
focus_neighbor_left = NodePath("../OptionsButton")
focus_neighbor_right = NodePath("../ExitButton")
focus_next = NodePath("../ExitButton")
focus_previous = NodePath("../OptionsButton")
theme_type_variation = &"TitleButton"
text = "MAINMENU_CREDITS"
clip_text = true

[node name="ExitButton" type="Button" parent="MenuPanel/MenuList/ButtonListMargin/ButtonList"]
editor_description = "UI-3"
layout_mode = 2
size_flags_horizontal = 3
focus_neighbor_left = NodePath("../OptionsButton")
focus_neighbor_right = NodePath("../NewGameButton")
focus_next = NodePath("../NewGameButton")
focus_previous = NodePath("../OptionsButton")
theme_type_variation = &"TitleButton"
text = "MAINMENU_EXIT"
clip_text = true

[node name="BottomSpace" type="Control" parent="MenuPanel/MenuList"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.35

[node name="BottomMargin" type="MarginContainer" parent="MenuPanel/MenuList"]
layout_mode = 2
theme_type_variation = &"BottomMargin"

[node name="ReleaseInfoBox" parent="MenuPanel/MenuList/BottomMargin" instance=ExtResource("3_km0er")]
layout_mode = 2

[node name="LocaleButton" parent="MenuPanel/MenuList/BottomMargin" instance=ExtResource("3_amonp")]
editor_description = "SS-87"
layout_mode = 2
size_flags_horizontal = 8
alignment = 0
text_overrun_behavior = 4

[connection signal="pressed" from="MenuPanel/MenuList/ButtonListMargin/ButtonList/NewGameButton" to="." method="_on_new_game_button_pressed"]
[connection signal="visibility_changed" from="MenuPanel/MenuList/ButtonListMargin/ButtonList/NewGameButton" to="." method="_on_new_game_button_visibility_changed"]
[connection signal="pressed" from="MenuPanel/MenuList/ButtonListMargin/ButtonList/ContinueButton" to="." method="_on_continue_button_pressed"]
[connection signal="pressed" from="MenuPanel/MenuList/ButtonListMargin/ButtonList/MultiplayerButton" to="." method="_on_multi_player_button_pressed"]
[connection signal="pressed" from="MenuPanel/MenuList/ButtonListMargin/ButtonList/OptionsButton" to="." method="_on_options_button_pressed"]
[connection signal="pressed" from="MenuPanel/MenuList/ButtonListMargin/ButtonList/CreditsButton" to="." method="_on_credits_button_pressed"]
[connection signal="pressed" from="MenuPanel/MenuList/ButtonListMargin/ButtonList/ExitButton" to="." method="_on_exit_button_pressed"]
